--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">Letreiro</string>
     <string name="action_sobre">Sobre o aplicativo</string>
     <string name="hello_world">Hello world!</string>
-    <string name="versao_code">Versão 1.0.6</string>
-    <string name="desenvolvido_por">Desenvolvido por: Alessandro Menezes</string>
-    <string name="email_contato">E-mail: alessandromenezes22@gmail.com</string>
+    <string name="versao_code">Versão 1.0.7</string>
+    <string name="desenvolvido_por">Desenvolvido por Kyxadious</string>
+    <string name="email_contato">kyxadious@gmail.com</string>
     <string name="hint_texto">Digite um texto aqui</string>
     <string name="button_save">Exibir letreiro</string>
     <string name="button_clear">Limpar texto</string>
